added submit button

--- a/PortalForm/src/index.html
+++ b/PortalForm/src/index.html
@@ -11,4 +11,7 @@
 <body>
   <app-root>Loading...</app-root>
 </body>
+<form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+  <button type="submit">Submit</button>
+</form>
 </html>
